@startuml
'https://plantuml.com/class-diagram

abstract class NhanVienF88{
    String chucVum, ten
    int hanMucDuyetVay
    void duyetChoVay(int khoanVay)
    NhanVienF88 capTren(NhanVienF88 capTren)
}
class ChuTich
class NhanVienChoVayF88

NhanVienF88 <|-- ChuTich
NhanVienF88 <|-- NhanVienChoVayF88
NhanVienChoVayF88 --> NhanVienF88 : "capTren"

@enduml